syntax = "proto2";

option java_package = "com.fissy.dialer.historyitemactions";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;


package com.fissy.dialer.historyitemactions;

import "com/fissy/dialer/logging/contact_source.proto";

// Contains information needed to construct items (modules) in a bottom sheet.
// Next ID: 17
message HistoryItemActionModuleInfo {
  // The dialer-normalized version of a phone number.
  // See DialerPhoneNumber.normalized_number.
  optional string normalized_number = 1;

  // The ISO 3166-1 two letters country code of the number.
  optional string country_iso = 2;

  // The name associated with the number.
  optional string name = 3;

  // The type of the call.
  // See android.provider.CallLog.Calls.TYPE.
  optional int32 call_type = 4;

  // Bit-mask describing features of the call.
  // See android.provider.CallLog.Calls.FEATURES.
  optional int32 features = 5;

  // The Contacts Provider lookup URI for the contact associated with the
  // number.
  optional string lookup_uri = 6;

  // The component name of the account used to place or receive the call.
  // See android.provider.CallLog.Calls.PHONE_ACCOUNT_COMPONENT_NAME.
  optional string phone_account_component_name = 7;

  // Whether the number can be reported as invalid through People API
  optional bool can_report_as_invalid_number = 8;

  // Whether assisted dialing is supported.
  optional bool can_support_assisted_dialing = 9;

  // Whether carrier video call is supported.
  optional bool can_support_carrier_video_call = 10;

  // Whether the number is blocked.
  optional bool is_blocked = 11;

  // Whether the number is spam.
  optional bool is_spam = 12;

  // Whether the call is to the voicemail inbox.
  optional bool is_voicemail_call = 13;

  // The source of the contact if there is one associated with the number.
  optional com.fissy.dialer.logging.ContactSource.Type contact_source = 14;

  // Places that can host items (modules) in a bottom sheet
  enum Host {
    UNKNOWN = 0;
    CALL_LOG = 1;
    VOICEMAIL = 2;
  }
  optional Host host = 15;

  // Whether the number is an emergency number.
  optional bool is_emergency_number = 16;
}
